--- a/Kai_files/Page344.htm
+++ b/Kai_files/Page344.htm
@@ -18,14 +18,14 @@ b\:* {behavior:url(#default#VML);}
 <!--
  /* Font Definitions */
 @font-face
-	{font-family:Broadway;
-	panose-1:4 4 9 5 8 11 2 2 5 2;}
-@font-face
 	{font-family:Algerian;
 	panose-1:4 2 7 5 4 10 2 6 7 2;}
 @font-face
 	{font-family:Calibri;
 	panose-1:2 15 5 2 2 2 4 3 2 4;}
+@font-face
+	{font-family:Broadway;
+	panose-1:4 4 9 5 8 11 2 2 5 2;}
  /* Style Definitions */
 p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{margin-right:0pt;
@@ -54,7 +54,7 @@ ul
 <body link="#E47E7E" vlink="#C84447" bgcolor="#B8D1BA" style='margin:0'>
 
 <div style='position:absolute;width:13.0156in;height:11.0156in'>
-<!--[if gte vml 1]><v:rect id="_x0000_s1244" style='position:absolute;left:-1.5pt;
+<!--[if gte vml 1]><v:rect id="_x0000_s1034" style='position:absolute;left:-1.5pt;
  top:1.5pt;width:937.5pt;height:795pt;z-index:10;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
@@ -73,8 +73,8 @@ ul
  <o:lock v:ext="edit" aspectratio="t"/>
 </v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:10;
 left:-2px;top:2px;width:1250px;height:1060px'><img width=1250 height=1060
-src=image4781.jpg v:shapes="_x0000_s1244"></span><![endif]><!--[if gte vml 1]><v:rect
- id="_x0000_s1051" style='position:absolute;left:324.52pt;top:54.29pt;width:485.01pt;
+src=image4781.jpg v:shapes="_x0000_s1034"></span><![endif]><!--[if gte vml 1]><v:rect
+ id="_x0000_s1035" style='position:absolute;left:324.52pt;top:54.29pt;width:485.01pt;
  height:179.19pt;z-index:11;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
@@ -93,8 +93,8 @@ src=image4781.jpg v:shapes="_x0000_s1244"></span><![endif]><!--[if gte vml 1]><v
  <o:lock v:ext="edit" aspectratio="t"/>
 </v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:11;
 left:433px;top:72px;width:646px;height:239px'><img width=646 height=239
-src=image2941.jpg v:shapes="_x0000_s1051"></span><![endif]><!--[if gte vml 1]><v:rect
- id="_x0000_s1052" style='position:absolute;left:50.42pt;top:36.09pt;width:204.92pt;
+src=image2941.jpg v:shapes="_x0000_s1035"></span><![endif]><!--[if gte vml 1]><v:rect
+ id="_x0000_s1036" style='position:absolute;left:50.42pt;top:36.09pt;width:204.92pt;
  height:204.93pt;z-index:12;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
@@ -113,12 +113,12 @@ src=image2941.jpg v:shapes="_x0000_s1051"></span><![endif]><!--[if gte vml 1]><v
  <o:lock v:ext="edit" aspectratio="t"/>
 </v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:12;
 left:67px;top:48px;width:273px;height:273px'><img width=273 height=273
-src=image296.png v:shapes="_x0000_s1052"></span><![endif]><!--[if gte vml 1]><v:shapetype
+src=image296.png v:shapes="_x0000_s1036"></span><![endif]><!--[if gte vml 1]><v:shapetype
  id="_x0000_t202" coordsize="21600,21600" o:spt="202" path="m,l,21600r21600,l21600,xe">
  <v:stroke joinstyle="miter"/>
  <v:path gradientshapeok="t" o:connecttype="rect"/>
-</v:shapetype><v:shape id="_x0000_s1092" type="#_x0000_t202" style='position:absolute;
- left:159.75pt;top:368.56pt;width:124.62pt;height:60.92pt;z-index:29;
+</v:shapetype><v:shape id="_x0000_s1053" type="#_x0000_t202" style='position:absolute;
+ left:159.75pt;top:368.56pt;width:124.62pt;height:60.92pt;z-index:25;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
  mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' filled="f"
  fillcolor="white [7]" stroked="f" strokecolor="black [0]" insetpen="t"
@@ -133,13 +133,13 @@ src=image296.png v:shapes="_x0000_s1052"></span><![endif]><!--[if gte vml 1]><v:
  </v:stroke>
  <v:shadow color="#eaebde [4]"/>
  <v:textbox style='mso-column-margin:5.76pt' inset="2.88pt,2.88pt,2.88pt,2.88pt"/>
-</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:29;
+</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:25;
 left:213px;top:491px;width:166px;height:82px'>
 
 <table cellpadding=0 cellspacing=0>
  <tr>
   <td width=166 height=82 style='vertical-align:top'><![endif]>
-  <div v:shape="_x0000_s1092" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
+  <div v:shape="_x0000_s1053" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
   class=shape>
   <p class=MsoNormal><span lang=en-US style='font-size:28.0pt;line-height:119%;
   font-family:Algerian;color:#0C0C0C;language:en-US'>History</span><span
@@ -150,9 +150,9 @@ left:213px;top:491px;width:166px;height:82px'>
  </tr>
 </table>
 
-</span><![endif]><!--[if gte vml 1]><v:shape id="_x0000_s1094" type="#_x0000_t202"
+</span><![endif]><!--[if gte vml 1]><v:shape id="_x0000_s1054" type="#_x0000_t202"
  style='position:absolute;left:60.06pt;top:423.94pt;width:387.69pt;height:297.7pt;
- z-index:30;mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
+ z-index:26;mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
  mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' filled="f"
  fillcolor="white [7]" stroked="f" strokecolor="black [0]" insetpen="t"
  o:cliptowrap="t">
@@ -166,13 +166,13 @@ left:213px;top:491px;width:166px;height:82px'>
  </v:stroke>
  <v:shadow color="#eaebde [4]"/>
  <v:textbox style='mso-column-margin:5.76pt' inset="2.88pt,2.88pt,2.88pt,2.88pt"/>
-</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:30;
+</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:26;
 left:80px;top:565px;width:517px;height:397px'>
 
 <table cellpadding=0 cellspacing=0>
  <tr>
   <td width=517 height=397 style='vertical-align:top'><![endif]>
-  <div v:shape="_x0000_s1094" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
+  <div v:shape="_x0000_s1054" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
   class=shape>
   <p class=MsoNormal><span lang=en-US style='font-size:16.0pt;line-height:119%;
   font-family:Calibri;color:#0C0C0C;language:en-US'>AMA Computer University&nbsp;(Filipino:&nbsp;Pamantasang Pangkompyuter ng AMA), using the trade name&nbsp;AMA University(Filipino:&nbsp;Pamantasan ng AMA), is the first ICT university in the Philippines and in Asia.[2]&nbsp;The university serves as the flagship brand of the AMA Education System (AMAES).</span></p>
@@ -183,9 +183,9 @@ left:80px;top:565px;width:517px;height:397px'>
  </tr>
 </table>
 
-</span><![endif]><!--[if gte vml 1]><v:shape id="_x0000_s1095" type="#_x0000_t202"
+</span><![endif]><!--[if gte vml 1]><v:shape id="_x0000_s1055" type="#_x0000_t202"
  style='position:absolute;left:595.91pt;top:363.02pt;width:156.46pt;height:59.54pt;
- z-index:31;mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
+ z-index:27;mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
  mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' filled="f"
  fillcolor="white [7]" stroked="f" strokecolor="black [0]" insetpen="t"
  o:cliptowrap="t">
@@ -199,13 +199,13 @@ left:80px;top:565px;width:517px;height:397px'>
  </v:stroke>
  <v:shadow color="#eaebde [4]"/>
  <v:textbox style='mso-column-margin:5.76pt' inset="2.88pt,2.88pt,2.88pt,2.88pt"/>
-</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:31;
+</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:27;
 left:795px;top:484px;width:208px;height:79px'>
 
 <table cellpadding=0 cellspacing=0>
  <tr>
   <td width=208 height=79 style='vertical-align:top'><![endif]>
-  <div v:shape="_x0000_s1095" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
+  <div v:shape="_x0000_s1055" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
   class=shape>
   <p class=MsoNormal style='text-align:center;text-align:center'><span
   lang=en-US style='font-size:24.0pt;line-height:119%;font-family:Algerian;
@@ -215,9 +215,9 @@ left:795px;top:484px;width:208px;height:79px'>
  </tr>
 </table>
 
-</span><![endif]><!--[if gte vml 1]><v:shape id="_x0000_s1096" type="#_x0000_t202"
+</span><![endif]><!--[if gte vml 1]><v:shape id="_x0000_s1056" type="#_x0000_t202"
  style='position:absolute;left:483.75pt;top:417.02pt;width:369.7pt;height:243.69pt;
- z-index:32;mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
+ z-index:28;mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
  mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' filled="f"
  fillcolor="white [7]" stroked="f" strokecolor="black [0]" insetpen="t"
  o:cliptowrap="t">
@@ -231,13 +231,13 @@ left:795px;top:484px;width:208px;height:79px'>
  </v:stroke>
  <v:shadow color="#eaebde [4]"/>
  <v:textbox style='mso-column-margin:5.76pt' inset="2.88pt,2.88pt,2.88pt,2.88pt"/>
-</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:32;
+</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:28;
 left:645px;top:556px;width:493px;height:325px'>
 
 <table cellpadding=0 cellspacing=0>
  <tr>
   <td width=493 height=325 style='vertical-align:top'><![endif]>
-  <div v:shape="_x0000_s1096" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
+  <div v:shape="_x0000_s1056" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
   class=shape>
   <p class=MsoNormal><span lang=en-US style='font-size:16.0pt;line-height:119%;
   font-family:Calibri;color:#0C0C0C;language:en-US'>With 13 computers and 13 students in a rented tenement in Mandaluyong in 1980, the AMA Education System has now grown into the biggest network of campuses in Asia.<br>
@@ -248,8 +248,8 @@ left:645px;top:556px;width:493px;height:325px'>
  </tr>
 </table>
 
-</span><![endif]><!--[if gte vml 1]><v:rect id="_x0000_s1140" style='position:absolute;
- left:598.91pt;top:660.67pt;width:274.58pt;height:96.54pt;z-index:61;
+</span><![endif]><!--[if gte vml 1]><v:rect id="_x0000_s1085" style='position:absolute;
+ left:598.91pt;top:660.67pt;width:274.58pt;height:96.54pt;z-index:56;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
  mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt'
  o:preferrelative="t" filled="f" fillcolor="white [7]" stroked="f"
@@ -266,15 +266,15 @@ left:645px;top:556px;width:493px;height:325px'>
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:61;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:56;
 left:799px;top:881px;width:366px;height:129px'><img width=366 height=129
-src=image5541.png v:shapes="_x0000_s1140"></span><![endif]><!--[if gte vml 1]><![if mso | ie]><v:shapetype
+src=image5541.png v:shapes="_x0000_s1085"></span><![endif]><!--[if gte vml 1]><![if mso | ie]><v:shapetype
  id="_x0000_t201" coordsize="21600,21600" o:spt="201" path="m,l,21600r21600,l21600,xe">
  <v:stroke joinstyle="miter"/>
  <v:path shadowok="f" o:extrusionok="f" strokeok="f" fillok="f" o:connecttype="rect"/>
  <o:lock v:ext="edit" shapetype="t"/>
-</v:shapetype><v:shape id="_x0000_s1053" type="#_x0000_t201" style='position:absolute;
- left:104.14pt;top:257.03pt;width:781.01pt;height:47.68pt;z-index:13;
+</v:shapetype><v:shape id="_x0000_s1116" type="#_x0000_t201" style='position:absolute;
+ left:77.14pt;top:272.03pt;width:781.87pt;height:43.34pt;z-index:70;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
  mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' stroked="f"
  strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -290,51 +290,55 @@ src=image5541.png v:shapes="_x0000_s1140"></span><![endif]><!--[if gte vml 1]><!
  </v:textbox>
 </v:shape><![endif]><![endif]-->
 
-<table v:shapes="_x0000_s1053" cellpadding=0 cellspacing=0 width=1041
- height=64 border=0 dir=ltr style='width:781.01pt;height:47.68pt;border-collapse:
- collapse;position:absolute;top:257.03pt;left:104.14pt;z-index:13'>
+<table v:shapes="_x0000_s1116" cellpadding=0 cellspacing=0 width=1042
+ height=58 border=0 dir=ltr style='width:781.87pt;height:43.34pt;border-collapse:
+ collapse;position:absolute;top:272.03pt;left:77.14pt;z-index:70'>
  <tr>
-  <td width=163 height=63 valign=Top bgcolor="#33352A" style='width:122.0851pt;
-  height:47.677pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  <td width=163 height=57 valign=Top bgcolor="#33352A" style='width:122.0851pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
   padding-bottom:2.88pt;background:#33352A'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>Home</span></p>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href="../Kai.htm"><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Home</span></a></p>
   </td>
-  <td width=147 height=63 valign=Top bgcolor="#33352A" style='width:110.6291pt;
-  height:47.677pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  <td width=147 height=57 valign=Top bgcolor="#33352A" style='width:110.6291pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
   padding-bottom:2.88pt;background:#33352A'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>About</span></p>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page344.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>About</span></a></p>
   </td>
-  <td width=131 height=63 valign=Top bgcolor="#33352A" style='width:98.1428pt;
-  height:47.677pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  <td width=132 height=57 valign=Top bgcolor="#33352A" style='width:99.0pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
   padding-bottom:2.88pt;background:#33352A'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>Courses</span></p>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page441.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Courses</span></a></p>
   </td>
-  <td width=238 height=63 valign=Top bgcolor="#33352A" style='width:178.5pt;
-  height:47.677pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  <td width=238 height=57 valign=Top bgcolor="#33352A" style='width:178.5pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
   padding-bottom:2.88pt;background:#33352A'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>Administration</span></p>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page417.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Administration</span></a></p>
   </td>
-  <td width=166 height=63 valign=Top bgcolor="#33352A" style='width:124.7719pt;
-  height:47.677pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  <td width=167 height=57 valign=Top bgcolor="#33352A" style='width:124.7719pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
   padding-bottom:2.88pt;background:#33352A'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page476.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Faculty</span></a><span
   lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>Faculty </span></p>
+  color:black;text-decoration:underline;language:en-US'> </span></p>
   </td>
-  <td width=196 height=63 valign=Top bgcolor="#33352A" style='width:146.8846pt;
-  height:47.677pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  <td width=195 height=57 valign=Top bgcolor="#33352A" style='width:146.8846pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
   padding-bottom:2.88pt;background:#33352A'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page393.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Contact</span></a><span
   lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>Contact </span></p>
+  color:black;text-decoration:underline;language:en-US'> </span></p>
   </td>
  </tr>
 </table>
