--- a/Kai_files/Page393.htm
+++ b/Kai_files/Page393.htm
@@ -18,11 +18,11 @@ b\:* {behavior:url(#default#VML);}
 <!--
  /* Font Definitions */
 @font-face
-	{font-family:Broadway;
-	panose-1:4 4 9 5 8 11 2 2 5 2;}
-@font-face
 	{font-family:"Bodoni MT Black";
 	panose-1:2 7 10 3 8 6 6 2 2 3;}
+@font-face
+	{font-family:Broadway;
+	panose-1:4 4 9 5 8 11 2 2 5 2;}
  /* Style Definitions */
 p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{margin-right:0pt;
@@ -51,8 +51,8 @@ ul
 <body link="#E47E7E" vlink="#C84447" bgcolor="#B8D1BA" style='margin:0'>
 
 <div style='position:absolute;width:13.0156in;height:11.0156in'>
-<!--[if gte vml 1]><v:rect id="_x0000_s1250" style='position:absolute;left:0;
- top:-3pt;width:937.5pt;height:795pt;z-index:17;mso-wrap-distance-left:2.88pt;
+<!--[if gte vml 1]><v:rect id="_x0000_s1041" style='position:absolute;left:0;
+ top:-3pt;width:937.5pt;height:795pt;z-index:16;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
  stroked="f" strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -68,11 +68,11 @@ ul
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:17;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:16;
 left:0px;top:-4px;width:1250px;height:1060px'><img width=1250 height=1060
-src=image4781.jpg v:shapes="_x0000_s1250"></span><![endif]><!--[if gte vml 1]><v:rect
- id="_x0000_s1067" style='position:absolute;left:324.52pt;top:54.29pt;width:485.01pt;
- height:179.19pt;z-index:18;mso-wrap-distance-left:2.88pt;
+src=image4781.jpg v:shapes="_x0000_s1041"></span><![endif]><!--[if gte vml 1]><v:rect
+ id="_x0000_s1042" style='position:absolute;left:324.52pt;top:54.29pt;width:485.01pt;
+ height:179.19pt;z-index:17;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
  stroked="f" strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -88,11 +88,11 @@ src=image4781.jpg v:shapes="_x0000_s1250"></span><![endif]><!--[if gte vml 1]><v
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:18;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:17;
 left:433px;top:72px;width:646px;height:239px'><img width=646 height=239
-src=image2941.jpg v:shapes="_x0000_s1067"></span><![endif]><!--[if gte vml 1]><v:rect
- id="_x0000_s1068" style='position:absolute;left:50.42pt;top:36.09pt;width:204.92pt;
- height:204.93pt;z-index:19;mso-wrap-distance-left:2.88pt;
+src=image2941.jpg v:shapes="_x0000_s1042"></span><![endif]><!--[if gte vml 1]><v:rect
+ id="_x0000_s1043" style='position:absolute;left:50.42pt;top:36.09pt;width:204.92pt;
+ height:204.93pt;z-index:18;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
  stroked="f" strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -108,14 +108,14 @@ src=image2941.jpg v:shapes="_x0000_s1067"></span><![endif]><!--[if gte vml 1]><v
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:19;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:18;
 left:67px;top:48px;width:273px;height:273px'><img width=273 height=273
-src=image296.png v:shapes="_x0000_s1068"></span><![endif]><!--[if gte vml 1]><v:shapetype
+src=image296.png v:shapes="_x0000_s1043"></span><![endif]><!--[if gte vml 1]><v:shapetype
  id="_x0000_t202" coordsize="21600,21600" o:spt="202" path="m,l,21600r21600,l21600,xe">
  <v:stroke joinstyle="miter"/>
  <v:path gradientshapeok="t" o:connecttype="rect"/>
-</v:shapetype><v:shape id="_x0000_s1104" type="#_x0000_t202" style='position:absolute;
- left:141.48pt;top:329.31pt;width:671.15pt;height:419.35pt;z-index:41;
+</v:shapetype><v:shape id="_x0000_s1065" type="#_x0000_t202" style='position:absolute;
+ left:141.48pt;top:329.31pt;width:671.15pt;height:419.35pt;z-index:36;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
  mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' filled="f"
  fillcolor="white [7]" stroked="f" strokecolor="black [0]" insetpen="t"
@@ -130,13 +130,13 @@ src=image296.png v:shapes="_x0000_s1068"></span><![endif]><!--[if gte vml 1]><v:
  </v:stroke>
  <v:shadow color="#eaebde [4]"/>
  <v:textbox style='mso-column-margin:5.76pt' inset="2.88pt,2.88pt,2.88pt,2.88pt"/>
-</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:41;
+</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:36;
 left:189px;top:439px;width:895px;height:559px'>
 
 <table cellpadding=0 cellspacing=0>
  <tr>
   <td width=895 height=559 style='vertical-align:top'><![endif]>
-  <div v:shape="_x0000_s1104" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
+  <div v:shape="_x0000_s1065" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
   class=shape>
   <p class=MsoNormal style='text-align:center;text-align:center'><span
   lang=en-US style='font-size:19.7pt;line-height:119%;font-family:"Bodoni MT Black";
@@ -167,8 +167,8 @@ left:189px;top:439px;width:895px;height:559px'>
  <v:stroke joinstyle="miter"/>
  <v:path shadowok="f" o:extrusionok="f" strokeok="f" fillok="f" o:connecttype="rect"/>
  <o:lock v:ext="edit" shapetype="t"/>
-</v:shapetype><v:shape id="_x0000_s1069" type="#_x0000_t201" style='position:absolute;
- left:104.14pt;top:257.03pt;width:781.01pt;height:49.82pt;z-index:20;
+</v:shapetype><v:shape id="_x0000_s1121" type="#_x0000_t201" style='position:absolute;
+ left:108.64pt;top:259.5pt;width:781.87pt;height:40.87pt;z-index:74;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
  mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' stroked="f"
  strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -184,51 +184,55 @@ left:189px;top:439px;width:895px;height:559px'>
  </v:textbox>
 </v:shape><![endif]><![endif]-->
 
-<table v:shapes="_x0000_s1069" cellpadding=0 cellspacing=0 width=1041
- height=66 border=0 dir=ltr style='width:781.01pt;height:49.82pt;border-collapse:
- collapse;position:absolute;top:257.03pt;left:104.14pt;z-index:20'>
+<table v:shapes="_x0000_s1121" cellpadding=0 cellspacing=0 width=1042
+ height=54 border=0 dir=ltr style='width:781.87pt;height:40.87pt;border-collapse:
+ collapse;position:absolute;top:259.5pt;left:108.64pt;z-index:74'>
  <tr>
-  <td width=163 height=66 valign=Top bgcolor="#4D5040" style='width:122.0851pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>Home</span></p>
+  <td width=163 height=55 valign=Top bgcolor="#33352A" style='width:122.0851pt;
+  height:40.875pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href="../Kai.htm"><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Home</span></a></p>
   </td>
-  <td width=147 height=66 valign=Top bgcolor="#4D5040" style='width:110.6291pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>About</span></p>
+  <td width=147 height=55 valign=Top bgcolor="#33352A" style='width:110.6291pt;
+  height:40.875pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page344.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>About</span></a></p>
   </td>
-  <td width=131 height=66 valign=Top bgcolor="#4D5040" style='width:98.1428pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>Courses</span></p>
+  <td width=132 height=55 valign=Top bgcolor="#33352A" style='width:99.0pt;
+  height:40.875pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page441.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Courses</span></a></p>
   </td>
-  <td width=238 height=66 valign=Top bgcolor="#4D5040" style='width:178.5pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>Administration</span></p>
+  <td width=238 height=55 valign=Top bgcolor="#33352A" style='width:178.5pt;
+  height:40.875pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page417.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Administration</span></a></p>
   </td>
-  <td width=166 height=66 valign=Top bgcolor="#4D5040" style='width:124.7719pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
+  <td width=167 height=55 valign=Top bgcolor="#33352A" style='width:124.7719pt;
+  height:40.875pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page476.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Faculty</span></a><span
   lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>Faculty </span></p>
+  color:black;text-decoration:underline;language:en-US'> </span></p>
   </td>
-  <td width=196 height=66 valign=Top bgcolor="#4D5040" style='width:146.8846pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
+  <td width=195 height=55 valign=Top bgcolor="#33352A" style='width:146.8846pt;
+  height:40.875pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page393.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Contact</span></a><span
   lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>Contact </span></p>
+  color:black;text-decoration:underline;language:en-US'> </span></p>
   </td>
  </tr>
 </table>
