--- a/Kai_files/Page417.htm
+++ b/Kai_files/Page417.htm
@@ -18,11 +18,11 @@ b\:* {behavior:url(#default#VML);}
 <!--
  /* Font Definitions */
 @font-face
-	{font-family:Broadway;
-	panose-1:4 4 9 5 8 11 2 2 5 2;}
-@font-face
 	{font-family:"Bodoni MT";
 	panose-1:2 7 6 3 8 6 6 2 2 3;}
+@font-face
+	{font-family:Broadway;
+	panose-1:4 4 9 5 8 11 2 2 5 2;}
  /* Style Definitions */
 p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{margin-right:0pt;
@@ -51,8 +51,8 @@ ul
 <body link="#E47E7E" vlink="#C84447" bgcolor="#B8D1BA" style='margin:0'>
 
 <div style='position:absolute;width:13.0156in;height:11.0156in'>
-<!--[if gte vml 1]><v:rect id="_x0000_s1246" style='position:absolute;left:0;
- top:0;width:937.5pt;height:795pt;z-index:21;mso-wrap-distance-left:2.88pt;
+<!--[if gte vml 1]><v:rect id="_x0000_s1045" style='position:absolute;left:0;
+ top:0;width:937.5pt;height:795pt;z-index:19;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
  stroked="f" strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -68,11 +68,11 @@ ul
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:21;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:19;
 left:0px;top:0px;width:1250px;height:1060px'><img width=1250 height=1060
-src=image4781.jpg v:shapes="_x0000_s1246"></span><![endif]><!--[if gte vml 1]><v:rect
- id="_x0000_s1075" style='position:absolute;left:324.52pt;top:54.29pt;width:485.01pt;
- height:179.19pt;z-index:22;mso-wrap-distance-left:2.88pt;
+src=image4781.jpg v:shapes="_x0000_s1045"></span><![endif]><!--[if gte vml 1]><v:rect
+ id="_x0000_s1046" style='position:absolute;left:324.52pt;top:54.29pt;width:485.01pt;
+ height:179.19pt;z-index:20;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
  stroked="f" strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -88,11 +88,11 @@ src=image4781.jpg v:shapes="_x0000_s1246"></span><![endif]><!--[if gte vml 1]><v
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:22;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:20;
 left:433px;top:72px;width:646px;height:239px'><img width=646 height=239
-src=image2941.jpg v:shapes="_x0000_s1075"></span><![endif]><!--[if gte vml 1]><v:rect
- id="_x0000_s1076" style='position:absolute;left:50.42pt;top:36.09pt;width:204.92pt;
- height:204.93pt;z-index:23;mso-wrap-distance-left:2.88pt;
+src=image2941.jpg v:shapes="_x0000_s1046"></span><![endif]><!--[if gte vml 1]><v:rect
+ id="_x0000_s1047" style='position:absolute;left:50.42pt;top:36.09pt;width:204.92pt;
+ height:204.93pt;z-index:21;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
  stroked="f" strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -108,11 +108,11 @@ src=image2941.jpg v:shapes="_x0000_s1075"></span><![endif]><!--[if gte vml 1]><v
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:23;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:21;
 left:67px;top:48px;width:273px;height:273px'><img width=273 height=273
-src=image296.png v:shapes="_x0000_s1076"></span><![endif]><!--[if gte vml 1]><v:rect
- id="_x0000_s1098" style='position:absolute;left:117.88pt;top:317.07pt;width:420.14pt;
- height:434.34pt;z-index:34;mso-wrap-distance-left:2.88pt;
+src=image296.png v:shapes="_x0000_s1047"></span><![endif]><!--[if gte vml 1]><v:rect
+ id="_x0000_s1058" style='position:absolute;left:117.88pt;top:317.07pt;width:420.14pt;
+ height:434.34pt;z-index:30;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
  stroked="f" strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -128,14 +128,14 @@ src=image296.png v:shapes="_x0000_s1076"></span><![endif]><!--[if gte vml 1]><v:
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:34;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:30;
 left:157px;top:423px;width:560px;height:579px'><img width=560 height=579
-src=image473.jpg v:shapes="_x0000_s1098"></span><![endif]><!--[if gte vml 1]><v:shapetype
+src=image473.jpg v:shapes="_x0000_s1058"></span><![endif]><!--[if gte vml 1]><v:shapetype
  id="_x0000_t202" coordsize="21600,21600" o:spt="202" path="m,l,21600r21600,l21600,xe">
  <v:stroke joinstyle="miter"/>
  <v:path gradientshapeok="t" o:connecttype="rect"/>
-</v:shapetype><v:shape id="_x0000_s1099" type="#_x0000_t202" style='position:absolute;
- left:587.6pt;top:351.97pt;width:240.92pt;height:137.07pt;z-index:35;
+</v:shapetype><v:shape id="_x0000_s1059" type="#_x0000_t202" style='position:absolute;
+ left:587.6pt;top:351.97pt;width:240.92pt;height:137.07pt;z-index:31;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
  mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' filled="f"
  fillcolor="white [7]" stroked="f" strokecolor="black [0]" insetpen="t"
@@ -150,13 +150,13 @@ src=image473.jpg v:shapes="_x0000_s1098"></span><![endif]><!--[if gte vml 1]><v:
  </v:stroke>
  <v:shadow color="#eaebde [4]"/>
  <v:textbox style='mso-column-margin:5.76pt' inset="2.88pt,2.88pt,2.88pt,2.88pt"/>
-</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:35;
+</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:31;
 left:783px;top:469px;width:322px;height:183px'>
 
 <table cellpadding=0 cellspacing=0>
  <tr>
   <td width=322 height=183 style='vertical-align:top'><![endif]>
-  <div v:shape="_x0000_s1099" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
+  <div v:shape="_x0000_s1059" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
   class=shape>
   <p class=MsoNormal><span lang=en-US style='font-size:20.0pt;line-height:119%;
   font-family:"Bodoni MT";color:red;font-weight:bold;language:en-US'>For more information about AMA Senior High, please call or visit any AMAES member school nearest you. </span></p>
@@ -170,8 +170,8 @@ left:783px;top:469px;width:322px;height:183px'>
  <v:stroke joinstyle="miter"/>
  <v:path shadowok="f" o:extrusionok="f" strokeok="f" fillok="f" o:connecttype="rect"/>
  <o:lock v:ext="edit" shapetype="t"/>
-</v:shapetype><v:shape id="_x0000_s1077" type="#_x0000_t201" style='position:absolute;
- left:104.14pt;top:257.03pt;width:781.01pt;height:49.82pt;z-index:24;
+</v:shapetype><v:shape id="_x0000_s1119" type="#_x0000_t201" style='position:absolute;
+ left:105.64pt;top:258.53pt;width:781.87pt;height:43.34pt;z-index:72;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
  mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' stroked="f"
  strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -187,51 +187,55 @@ left:783px;top:469px;width:322px;height:183px'>
  </v:textbox>
 </v:shape><![endif]><![endif]-->
 
-<table v:shapes="_x0000_s1077" cellpadding=0 cellspacing=0 width=1041
- height=66 border=0 dir=ltr style='width:781.01pt;height:49.82pt;border-collapse:
- collapse;position:absolute;top:257.03pt;left:104.14pt;z-index:24'>
+<table v:shapes="_x0000_s1119" cellpadding=0 cellspacing=0 width=1042
+ height=58 border=0 dir=ltr style='width:781.87pt;height:43.34pt;border-collapse:
+ collapse;position:absolute;top:258.53pt;left:105.64pt;z-index:72'>
  <tr>
-  <td width=163 height=66 valign=Top bgcolor="#4D5040" style='width:122.0851pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>Home</span></p>
+  <td width=163 height=57 valign=Top bgcolor="#33352A" style='width:122.0851pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href="../Kai.htm"><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Home</span></a></p>
   </td>
-  <td width=147 height=66 valign=Top bgcolor="#4D5040" style='width:110.6291pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>About</span></p>
+  <td width=147 height=57 valign=Top bgcolor="#33352A" style='width:110.6291pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page344.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>About</span></a></p>
   </td>
-  <td width=131 height=66 valign=Top bgcolor="#4D5040" style='width:98.1428pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>Courses</span></p>
+  <td width=132 height=57 valign=Top bgcolor="#33352A" style='width:99.0pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page441.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Courses</span></a></p>
   </td>
-  <td width=238 height=66 valign=Top bgcolor="#4D5040" style='width:178.5pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>Administration</span></p>
+  <td width=238 height=57 valign=Top bgcolor="#33352A" style='width:178.5pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page417.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Administration</span></a></p>
   </td>
-  <td width=166 height=66 valign=Top bgcolor="#4D5040" style='width:124.7719pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
+  <td width=167 height=57 valign=Top bgcolor="#33352A" style='width:124.7719pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page476.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Faculty</span></a><span
   lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>Faculty </span></p>
+  color:black;text-decoration:underline;language:en-US'> </span></p>
   </td>
-  <td width=196 height=66 valign=Top bgcolor="#4D5040" style='width:146.8846pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
+  <td width=195 height=57 valign=Top bgcolor="#33352A" style='width:146.8846pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page393.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Contact</span></a><span
   lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  language:en-US'>Contact </span></p>
+  color:black;text-decoration:underline;language:en-US'> </span></p>
   </td>
  </tr>
 </table>
