--- a/Kai_files/Page441.htm
+++ b/Kai_files/Page441.htm
@@ -48,8 +48,8 @@ ul
 <body link="#E47E7E" vlink="#C84447" bgcolor="#B8D1BA" style='margin:0'>
 
 <div style='position:absolute;width:13.0156in;height:10.0553in'>
-<!--[if gte vml 1]><v:rect id="_x0000_s1245" style='position:absolute;left:1.5pt;
- top:-4.5pt;width:937.5pt;height:795pt;z-index:25;mso-wrap-distance-left:2.88pt;
+<!--[if gte vml 1]><v:rect id="_x0000_s1049" style='position:absolute;left:1.5pt;
+ top:-4.5pt;width:937.5pt;height:795pt;z-index:22;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
  stroked="f" strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -65,11 +65,11 @@ ul
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:25;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:22;
 left:2px;top:-6px;width:1250px;height:1060px'><img width=1250 height=1060
-src=image4781.jpg v:shapes="_x0000_s1245"></span><![endif]><!--[if gte vml 1]><v:rect
- id="_x0000_s1083" style='position:absolute;left:324.52pt;top:54.29pt;width:485.01pt;
- height:179.19pt;z-index:26;mso-wrap-distance-left:2.88pt;
+src=image4781.jpg v:shapes="_x0000_s1049"></span><![endif]><!--[if gte vml 1]><v:rect
+ id="_x0000_s1050" style='position:absolute;left:324.52pt;top:54.29pt;width:485.01pt;
+ height:179.19pt;z-index:23;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
  stroked="f" strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -85,11 +85,11 @@ src=image4781.jpg v:shapes="_x0000_s1245"></span><![endif]><!--[if gte vml 1]><v
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:26;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:23;
 left:433px;top:72px;width:646px;height:239px'><img width=646 height=239
-src=image2941.jpg v:shapes="_x0000_s1083"></span><![endif]><!--[if gte vml 1]><v:rect
- id="_x0000_s1084" style='position:absolute;left:50.42pt;top:36.09pt;width:204.92pt;
- height:204.93pt;z-index:27;mso-wrap-distance-left:2.88pt;
+src=image2941.jpg v:shapes="_x0000_s1050"></span><![endif]><!--[if gte vml 1]><v:rect
+ id="_x0000_s1051" style='position:absolute;left:50.42pt;top:36.09pt;width:204.92pt;
+ height:204.93pt;z-index:24;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
  stroked="f" strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -105,11 +105,11 @@ src=image2941.jpg v:shapes="_x0000_s1083"></span><![endif]><!--[if gte vml 1]><v
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:27;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:24;
 left:67px;top:48px;width:273px;height:273px'><img width=273 height=273
-src=image296.png v:shapes="_x0000_s1084"></span><![endif]><!--[if gte vml 1]><v:rect
- id="_x0000_s1097" style='position:absolute;left:269.1pt;top:315.7pt;width:440.64pt;
- height:441.49pt;z-index:33;mso-wrap-distance-left:2.88pt;
+src=image296.png v:shapes="_x0000_s1051"></span><![endif]><!--[if gte vml 1]><v:rect
+ id="_x0000_s1057" style='position:absolute;left:269.1pt;top:315.7pt;width:440.64pt;
+ height:441.49pt;z-index:29;mso-wrap-distance-left:2.88pt;
  mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
  mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
  stroked="f" strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -125,15 +125,15 @@ src=image296.png v:shapes="_x0000_s1084"></span><![endif]><!--[if gte vml 1]><v:
  <v:shadow color="#eaebde [4]"/>
  <v:path o:extrusionok="f"/>
  <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:33;
+</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:29;
 left:359px;top:421px;width:587px;height:589px'><img width=587 height=589
-src=image471.jpg v:shapes="_x0000_s1097"></span><![endif]><!--[if gte vml 1]><![if mso | ie]><v:shapetype
+src=image471.jpg v:shapes="_x0000_s1057"></span><![endif]><!--[if gte vml 1]><![if mso | ie]><v:shapetype
  id="_x0000_t201" coordsize="21600,21600" o:spt="201" path="m,l,21600r21600,l21600,xe">
  <v:stroke joinstyle="miter"/>
  <v:path shadowok="f" o:extrusionok="f" strokeok="f" fillok="f" o:connecttype="rect"/>
  <o:lock v:ext="edit" shapetype="t"/>
-</v:shapetype><v:shape id="_x0000_s1085" type="#_x0000_t201" style='position:absolute;
- left:104.14pt;top:257.03pt;width:781.01pt;height:49.82pt;z-index:28;
+</v:shapetype><v:shape id="_x0000_s1118" type="#_x0000_t201" style='position:absolute;
+ left:119.14pt;top:251.03pt;width:781.87pt;height:43.34pt;z-index:71;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
  mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' stroked="f"
  strokecolor="black [0]" insetpen="t" o:cliptowrap="t">
@@ -149,51 +149,55 @@ src=image471.jpg v:shapes="_x0000_s1097"></span><![endif]><!--[if gte vml 1]><![
  </v:textbox>
 </v:shape><![endif]><![endif]-->
 
-<table v:shapes="_x0000_s1085" cellpadding=0 cellspacing=0 width=1041
- height=66 border=0 dir=ltr style='width:781.01pt;height:49.82pt;border-collapse:
- collapse;position:absolute;top:257.03pt;left:104.14pt;z-index:28'>
+<table v:shapes="_x0000_s1118" cellpadding=0 cellspacing=0 width=1042
+ height=58 border=0 dir=ltr style='width:781.87pt;height:43.34pt;border-collapse:
+ collapse;position:absolute;top:251.03pt;left:119.14pt;z-index:71'>
  <tr>
-  <td width=163 height=66 valign=Top bgcolor="#4D5040" style='width:122.0851pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>Home</span></p>
+  <td width=163 height=57 valign=Top bgcolor="#33352A" style='width:122.0851pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href="../Kai.htm"><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Home</span></a></p>
   </td>
-  <td width=147 height=66 valign=Top bgcolor="#4D5040" style='width:110.6291pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>About</span></p>
+  <td width=147 height=57 valign=Top bgcolor="#33352A" style='width:110.6291pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page344.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>About</span></a></p>
   </td>
-  <td width=131 height=66 valign=Top bgcolor="#4D5040" style='width:98.1428pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>Courses</span></p>
+  <td width=132 height=57 valign=Top bgcolor="#33352A" style='width:99.0pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page441.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Courses</span></a></p>
   </td>
-  <td width=238 height=66 valign=Top bgcolor="#4D5040" style='width:178.5pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
-  lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>Administration</span></p>
+  <td width=238 height=57 valign=Top bgcolor="#33352A" style='width:178.5pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page417.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Administration</span></a></p>
   </td>
-  <td width=166 height=66 valign=Top bgcolor="#4D5040" style='width:124.7719pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
+  <td width=167 height=57 valign=Top bgcolor="#33352A" style='width:124.7719pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page476.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Faculty</span></a><span
   lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>Faculty </span></p>
+  color:black;text-decoration:underline;language:en-US'> </span></p>
   </td>
-  <td width=196 height=66 valign=Top bgcolor="#4D5040" style='width:146.8846pt;
-  height:49.813pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
-  padding-bottom:2.88pt;background:#4D5040'>
-  <p class=MsoNormal style='text-align:center;text-align:center'><span
+  <td width=195 height=57 valign=Top bgcolor="#33352A" style='width:146.8846pt;
+  height:43.3377pt;padding-left:2.88pt;padding-right:2.88pt;padding-top:2.88pt;
+  padding-bottom:2.88pt;background:#33352A'>
+  <p class=MsoNormal style='text-align:center;text-align:center'><a
+  href=Page393.htm><span lang=en-US style='font-size:20.0pt;line-height:119%;
+  font-family:Broadway;color:black;text-decoration:underline;language:en-US'>Contact</span></a><span
   lang=en-US style='font-size:20.0pt;line-height:119%;font-family:Broadway;
-  color:black;language:en-US'>Contact </span></p>
+  color:black;text-decoration:underline;language:en-US'> </span></p>
   </td>
  </tr>
 </table>
